--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -5,7 +5,7 @@
         <strong>Fee Type</strong>: {{studentInfoTodisplay.StudentFeeType}}
     </mat-card-subtitle>
     <mat-card-content>
-        <div style="padding: 15px;" fxLayout="row wrap" fxLayoutGap="100px">
+        <div style="padding: 0px 0px 15px 15px;" fxLayout="row wrap" fxLayoutGap="100px">
             <div style="width: 100%;">
                 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
                 <alert></alert>
@@ -99,6 +99,13 @@
                                         <input matInput [maxlength]="20"
                                             [(ngModel)]="OffLineReceiptNo" [value]="OffLineReceiptNo"
                                             autocomplete="Off">
+                                    </mat-form-field>
+                                    <mat-form-field>
+                                        <mat-label>Payment Type</mat-label>
+                                        <mat-select [(ngModel)]="PaymentTypeId" [value]="PaymentTypeId">
+                                            <mat-option *ngFor="let item of PaymentTypes" 
+                                            [value]="item.MasterDataId">{{item.MasterDataName}}</mat-option>
+                                        </mat-select>
                                     </mat-form-field>                             
                                     <button [disabled]="loading || calculateTotal()==0 || Permission=='read'" matTooltip="pay" mat-mini-fab
                                         (click)="billpayment()">
