--- a/src/app/modules/studentexam/studentactivity/studentactivity.component.html
+++ b/src/app/modules/studentexam/studentactivity/studentactivity.component.html
@@ -24,15 +24,15 @@
                 <ng-container matColumnDef="Student">
                     <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Student
                     </mat-header-cell>
-                    <mat-cell style="display: flex;" *matCellDef="let element">
+                    <mat-cell *matCellDef="let element">
                         {{element.Student}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Activity">
                     <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Activity
                     </mat-header-cell>
-                    <mat-cell style="display: flex;" *matCellDef="let element">
-                           <mat-form-field [style.width.px]="200">
+                    <mat-cell *matCellDef="let element">
+                           <mat-form-field [style.width.px]="400" appearance="outline">
                                <textarea matInput 
                                (blur)="onBlur(element)"
                                [value]="element.Activity"  
@@ -40,11 +40,34 @@
                            </mat-form-field>
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="ActivityDate">
-                    <mat-header-cell style="display: flex;" *matHeaderCellDef>Date
+                <ng-container matColumnDef="CategoryId">
+                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Category
                     </mat-header-cell>
-                    <mat-cell style="display: flex;" *matCellDef="let element">
-                           <mat-form-field [style.width.px]="120">
+                    <mat-cell *matCellDef="let element">
+                           <mat-form-field [style.width.px]="150" appearance="outline">
+                               <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.CategoryId" [value]="element.CategoryId">
+                                   <mat-option *ngFor="let item of Categories" [value]="item.MasterDataId">{{item.MasterDataName}}</mat-option>
+                               </mat-select>
+                           </mat-form-field>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="SubCategoryId">
+                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Sub Category
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                           <mat-form-field [style.width.px]="150" appearance="outline">                               
+                               <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.SubCategoryId" [value]="element.SubCategoryId">
+                                <mat-option [value]="0">--sub category--</mat-option>
+                                <mat-option *ngFor="let item of SubCategories" [value]="item.MasterDataId">{{item.MasterDataName}}</mat-option>
+                               </mat-select>
+                           </mat-form-field>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="ActivityDate">
+                    <mat-header-cell *matHeaderCellDef>Date
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                           <mat-form-field [style.width.px]="130" appearance="outline">
                             <input [value]="element.ActivityDate" (dateChange)="onBlur(element)"
                             [(ngModel)]="element.ActivityDate" matInput 
                             [matDatepicker]="ActivityDate" autocomplete="off">
@@ -53,7 +76,6 @@
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
-
                 <ng-container matColumnDef="Active">
                     <mat-header-cell *matHeaderCellDef>Active
                     </mat-header-cell>
