--- a/src/app/modules/classes/school-fee-types/school-fee-types.component.scss
+++ b/src/app/modules/classes/school-fee-types/school-fee-types.component.scss
@@ -1,13 +1,25 @@
-.mat-column-Active{
-    display:flex;
-    justify-content: center;
+.mat-form-field{
+    width: 99%;
+    margin-right: 15px;
+}
+.mat-column-Action{
+    flex:0 0 100px;
+}
+.mat-column-FeeTypeId,.mat-column-Active{
+    flex:0 0 50px;
+}
+.mat-column-FeeTypeName,.mat-column-Description
+{
+    flex:0 0 200px;
 }
 .mat-column-Formula{
-    flex:0 0 20%;
+    flex:0 0 400px;
 }
-.mat-form-field{
-    margin-right: 15px;;
-}
+
 mat-cell:first-of-type{
     padding-left: 0px;
+}
+.mat-table{
+    min-width: 700px;
+    max-width: 1000px;
 }
