--- a/src/app/modules/classes/classdetail/classdetail.component.html
+++ b/src/app/modules/classes/classdetail/classdetail.component.html
@@ -20,31 +20,38 @@
                 </button>
             </form>
             <mat-table #table [dataSource]="dataSource">
-                <ng-container matColumnDef="ClassName">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Class Name
+                <ng-container matColumnDef="ClassId">
+                    <mat-header-cell *matHeaderCellDef>Id
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                        {{element.ClassId}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="ClassName">
+                    <mat-header-cell *matHeaderCellDef>Class Name
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <mat-form-field appearance="outline">
                             <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="250"
                                 [value]="element.ClassName" [(ngModel)]="element.ClassName">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Sequence">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Sequence
+                    <mat-header-cell *matHeaderCellDef>Sequence
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="100">
+                        <mat-form-field appearance="outline">
                             <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="250"
                                 [value]="element.Sequence" [(ngModel)]="element.Sequence">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="DurationId">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Duration
+                    <mat-header-cell *matHeaderCellDef>Duration
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="100">
+                        <mat-form-field appearance="outline">
                             <mat-select (selectionChange)="onBlur(element)" [value]="element.DurationId"
                                 [(ngModel)]="element.DurationId">
                                 <mat-option *ngFor="let item of Durations" [value]="item.MasterDataId">
@@ -54,10 +61,10 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="StudyAreaId">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Study Area
+                    <mat-header-cell *matHeaderCellDef>Study Area
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="100">
+                        <mat-form-field appearance="outline">
                             <mat-select (selectionChange)="onBlur(element)" [value]="element.StudyAreaId"
                                 [(ngModel)]="element.StudyAreaId">
                                 <mat-option *ngFor="let item of StudyArea" [value]="item.MasterDataId">
@@ -67,10 +74,10 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="StudyModeId">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Study Mode
+                    <mat-header-cell *matHeaderCellDef>Study Mode
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field [style.width.px]="100" appearance="outline">
+                        <mat-form-field appearance="outline">
                             <mat-select (selectionChange)="onBlur(element)" [value]="element.StudyModeId"
                                 [(ngModel)]="element.StudyModeId">
                                 <mat-option *ngFor="let item of StudyMode" [value]="item.MasterDataId">
@@ -80,30 +87,30 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="MinStudent">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Min Student
+                    <mat-header-cell *matHeaderCellDef>Min Student
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="100">
+                        <mat-form-field appearance="outline">
                             <input matInput (blur)="onBlur(element)" autocomplete="Off" type="number" [max]="250"
                                 [value]="element.MinStudent" [(ngModel)]="element.MinStudent">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="MaxStudent">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Max Student
+                    <mat-header-cell *matHeaderCellDef>Max Student
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="100">
+                        <mat-form-field appearance="outline">
                             <input matInput (blur)="onBlur(element)" autocomplete="Off" type="number" [max]="250"
                                 [value]="element.MaxStudent" [(ngModel)]="element.MaxStudent">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="StartDate">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Start Date
+                    <mat-header-cell *matHeaderCellDef>Start Date
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="130">
+                        <mat-form-field appearance="outline">
                             <input [(ngModel)]="element.StartDate" [value]="element.StartDate" matInput
                                 [matDatepicker]="StartDate" autocomplete="off">
                             <mat-datepicker-toggle matSuffix [for]="StartDate"></mat-datepicker-toggle>
@@ -112,10 +119,10 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="EndDate">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>End Date
+                    <mat-header-cell *matHeaderCellDef>End Date
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="130">
+                        <mat-form-field appearance="outline">
                             <input [(ngModel)]="element.EndDate" [value]="element.EndDate" matInput
                                 [matDatepicker]="EndDate" autocomplete="off">
                             <mat-datepicker-toggle matSuffix [for]="EndDate"></mat-datepicker-toggle>
@@ -126,7 +133,7 @@
                 <ng-container matColumnDef="Active">
                     <mat-header-cell *matHeaderCellDef>Active
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
+                    <mat-cell style="justify-content: center;" *matCellDef="let element">
                         <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
                             [checked]="element.Active==1?true:false">
                         </mat-checkbox>
@@ -138,7 +145,8 @@
                             <mat-icon>add</mat-icon>
                         </button>
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
+                    <mat-cell *matCellDef="let element" 
+                    fxLayoutAlign="space-between center" fxLayout="row">
                         <button [disabled]="loading || !element.Action" matTooltip="save" mat-mini-fab
                             (click)="UpdateOrSave(element)">
                             <mat-icon>save</mat-icon>
