--- a/src/app/modules/classes/classdetail/classdetail.component.scss
+++ b/src/app/modules/classes/classdetail/classdetail.component.scss
@@ -1,17 +1,34 @@
 mat-form-field{
     margin-right: 15px;
+    width:99%;
 }
 .mat-column-ClassName{
     flex: 1 1 150px;
     padding-left: 0px;
 }
-.mat-column-StartDate,.mat-column-EndDate{
+.mat-column-StartDate,.mat-column-EndDate,.mat-column-StudyAreaId,.mat-column-StudyModeId{
     flex: 1 1 130px;
 }
-.mat-column-Sequence,.mat-column-MaxStudent,.mat-column-MinStudent,
-.mat-column-Action,.mat-column-Active,.mat-column-StudyAreaId,
-.mat-column-StudyModeId,.mat-column-DurationId{
-    justify-content: center;
+.mat-column-MaxStudent,.mat-column-MinStudent,
+.mat-column-Action{
     flex: 1 1 100px;
-    //margin-right: 10px;
 }
+.mat-column-ClassId{
+    flex: 1 1 50px;
+}
+.mat-column-Sequence,.mat-column-DurationId,.mat-column-Active{
+    
+    flex: 1 1 80px;
+}
+// .w-80{
+//     width: 80px;
+// }
+// .w-100{
+//     width:100px;
+// }
+// .w-130{
+//     width: 130px;
+// }
+// .w-150{
+//     width: 150px;
+// }
