--- a/src/app/modules/classes/school-fee-types/school-fee-types.component.html
+++ b/src/app/modules/classes/school-fee-types/school-fee-types.component.html
@@ -43,7 +43,7 @@
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="Formula">
-                <mat-header-cell *matHeaderCellDef>Discount Formula
+                <mat-header-cell *matHeaderCellDef>Amount Formula
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field [style.width.pc]="50" appearance="outline">
